# netology

./: .gitignore  .gitmodules  README.md
cpp-advanced/01/: CMakeLists.txt  README.md
cpp-advanced/01/01/: CMakeLists.txt  README.md  main.cc
cpp-advanced/01/02/: CMakeLists.txt  README.md  main.cc
cpp-advanced/01/03/: CMakeLists.txt  README.md  main.cc
cpp-advanced/02/01/: 01  CMakeLists.txt  README.md  main.cc
cpp-advanced/03/: README.md
cpp-advanced/03/01/: README.md  main.cc
cpp-advanced/03/02/: CMakeLists.txt  README.md  main.cc
cpp-advanced/04/01/: CMakeLists.txt  README.md  main.cc
cpp-advanced/04/02/: CMakeLists.txt  README.md  main.cc
cpp-advanced/05/01/: CMakeLists.txt  README.md  main.cc
cpp-advanced/05/02/: CMakeLists.txt  README.md  main.cc
cpp-advanced/05/03/: CMakeLists.txt  README.md  main.cc
cpp-advanced/06/01/: README.md  main.cc
cpp-advanced/06/02/: CMakeLists.txt  README.md  main.cc
cpp-advanced/06/03/: CMakeLists.txt  README.md  main.cc
cpp-advanced/07/01/: README.md  main.cc
cpp-advanced/07/02/: CMakeLists.txt  README.md  main.cc
cpp-advanced/08/01/: README.md  main.cc
cpp-advanced/08/02/: README.md  main.cc
cpp-advanced/08/03/: CMakeLists.txt  README.md  main.cc
cpp-advanced/09/01/: CMakeLists.txt  README.md  main.cc
cpp-advanced/09/02/: main  main.cc  mvse
cpp-advanced/course/: CMakeLists.txt  README.md  main.cc  test.ini
cpp-advanced/course/include/: parser.hh
cpp-advanced/course/src/: parser.cc
cpp-advanced/course/tests/: CMakeLists.txt  README.md  checkIni.cpp  mistakes01.ini  mistakes02.ini  mistakes03.ini  test.ini  test2.ini  test_exceptions.ini
cpp-base-homeworks/: .gitignore  README.md
cpp-base-homeworks/01/: README.md
cpp-base-homeworks/01/01/: README.md  main.cc
cpp-base-homeworks/02/01/: README.md  main.cc
cpp-base-homeworks/02/02/: README.md  main  main.cc
cpp-base-homeworks/02/03/: README.md  main.cc
cpp-base-homeworks/03/: Makefile  README.md
cpp-base-homeworks/03/01/: README.md  main.cc
cpp-base-homeworks/03/02/: README.md  main.cc
cpp-base-homeworks/04/: README.md
cpp-base-homeworks/04/01/: README.md  main.cc
cpp-base-homeworks/04/02/: README.md  main.cc
cpp-base-homeworks/05/: Makefile  README.md
cpp-base-homeworks/05/01/: README.md  main.cc
cpp-base-homeworks/05/02/: Makefile  README.md  main.cc
cpp-base-homeworks/05/03/: README.md  main.cc
cpp-base-homeworks/06/: README.md
cpp-base-homeworks/06/01/: Makefile  README.md  main.cc  mathfunc.cc  mathfunc.h
cpp-base-homeworks/06/02/: Makefile  README.md  counter.cc  counter.h  main.cc
cpp-base-homeworks/06/03/: Makefile  README.md  main.cc  rectangle.cc
cpp-base-homeworks/07/: README.md
cpp-base-homeworks/07/01/: Makefile  README.md  main.cc
cpp-base-homeworks/07/02/: Makefile  README.md  main.cc
cpp-base-homeworks/08/: Makefile  README.md
cpp-base-homeworks/08/01/: README.md  main.cc
cpp-base-homeworks/08/02/: Makefile  README.md  equilTriangle.cc  equilTriangle.h  exceptions.cc  exceptions.h  figure.cc  figure.h  isosTriangle.cc  isosTriangle.h  main.cc  parallelogram.cc  quadrilateral.cc  rectangle.cc  rectangle.h  rhombus.cc  rightTriangle.cc  rightTriangle.h  square.cc  triangle.cc
cpp-base-homeworks/09/: README.md
cpp-base-homeworks/09/01/: README.md  main.cc
cpp-base-homeworks/10/: README.md
cpp-base-homeworks/11/: CMakeLists.txt
cpp-base-homeworks/11/05/04/: CMakeLists.txt
cpp-base-homeworks/course/: CMakeLists.txt  Makefile  main.cc
cpp-base-homeworks/course/include/: race.h  racepool.h  transport.h
cpp-base-homeworks/course/include/air/: air.h  broom.h  carpetPlane.h  eagle.h
cpp-base-homeworks/course/include/ground/: camel.h  camelSpeed.h  centaur.h  ground.h  terrainBoots.h
cpp-base-homeworks/course/sources/: race.cc  racepool.cc  transport.cc
cpp-base-homeworks/course/sources/air/: air.cc  broom.cc  carpetPlane.cc  eagle.cc
cpp-base-homeworks/course/sources/ground/: camel.cc  camelSpeed.cc  centaur.cc  ground.cc  terrainBoots.cc
cpp-sql/05/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  ClientManager.cc  ClientManager.h  Dockerfile  README.md  docker-compose.yaml  main.cc  parser.cc  parser.h  users.csv
cpp-threads/01/01/: main.cc  (+2 more)
cpp-threads/01/02/: .env  CMakeLists.txt  Dockerfile  README.md  cpp-threads02  entrypoint.sh  main.cc
cpp-threads/04/: CMakeLists.txt  main.cc  shape.cpp  shape.h  transform.h
cpp-threads/04/include/: circle.h  line.h  shape.h  square.h  threeDimShape.h  twoDimShape.h
cpp-threads/04/src/: circle.cc  line.cc  square.cc  threeDimShape.cc  twoDimShape.cc
cpp-threads/course/: CMakeLists.txt  main.cc
(+44 files in other folders)
